tests-macros/tests/value/fail_struct_field_not_typed.rs
struct F;

#[derive(
    qi_macros::AsValue,
    qi_macros::FromValue,
    qi_macros::IntoValue,
    qi_macros::Reflect,
    qi_macros::StdTryFromValue,
)]
struct S {
    pub f: F,
}

fn main() {}
